// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DynamicCompose Schema Tests with Ark > DynamicCompose Schema V2 > Basic Structure > should validate minimal dynamic compose 1`] = `
{
  "schemaVersion": 2,
  "services": [
    {
      "image": "nginx:latest",
      "internalPort": 80,
      "name": "web",
    },
  ],
}
`;

exports[`DynamicCompose Schema Tests with Ark > Service Schema V2 > Required Fields > should validate minimal valid service 1`] = `
{
  "image": "nginx:latest",
  "internalPort": 80,
  "name": "web-server",
}
`;

exports[`DynamicCompose Schema Tests with Zod > DynamicCompose Schema V2 > Basic Structure > should validate minimal dynamic compose 1`] = `
{
  "schemaVersion": 2,
  "services": [
    {
      "image": "nginx:latest",
      "internalPort": 80,
      "name": "web",
    },
  ],
}
`;

exports[`DynamicCompose Schema Tests with Zod > Service Schema V2 > Required Fields > should validate minimal valid service 1`] = `
{
  "image": "nginx:latest",
  "internalPort": 80,
  "name": "web-server",
}
`;

exports[`DynamicCompose Schema Tests with Zod Service Schema V2 Required Fields should validate minimal valid service 1`] = `
{
  "image": "nginx:latest",
  "internalPort": 80,
  "name": "web-server",
}
`;

exports[`DynamicCompose Schema Tests with Zod DynamicCompose Schema V2 Basic Structure should validate minimal dynamic compose 1`] = `
{
  "schemaVersion": 2,
  "services": [
    {
      "image": "nginx:latest",
      "internalPort": 80,
      "name": "web",
    },
  ],
}
`;

exports[`DynamicCompose Schema Tests with Ark Service Schema V2 Required Fields should validate minimal valid service 1`] = `
{
  "image": "nginx:latest",
  "internalPort": 80,
  "name": "web-server",
}
`;

exports[`DynamicCompose Schema Tests with Ark DynamicCompose Schema V2 Basic Structure should validate minimal dynamic compose 1`] = `
{
  "schemaVersion": 2,
  "services": [
    {
      "image": "nginx:latest",
      "internalPort": 80,
      "name": "web",
    },
  ],
}
`;
